--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "crow"]
 	path = crow
 	url = https://github.com/ipkn/crow.git
+[submodule "json"]
+	path = json
+	url = https://github.com/nlohmann/json.git
